<resources>
    <string name="app_name">MyPupu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mmm_address">金山工业集...</string>
    <string name="mmm_search">搜索</string>
    <string name="mmm_search_hint">1元起送，30分钟达</string>
    <string name="mmm_home">首页</string>
    <string name="mmm_sort">分类</string>
    <string name="mmm_recommend">掌柜推荐</string>
    <string name="mmm_flash">限时抢购</string>
    <string name="mmm_crazy">疯狂折扣</string>
    <string name="mmm_fruit">水果</string>
    <string name="mmm_goods_title">商品标题</string>
    <string name="mmm_goods_subtitle">商品副标题</string>
    <string name="mmm_goods_quantity">商品数量</string>
    <string name="mmm_goods_remark">商品备注</string>
    <string name="mmm_rmb">¥</string>
    <string name="mmm_goods_price">价格</string>
    <string name="mmm_goods_ori_price">原价</string>
    <string name="main_tab_default" />
    <string name="mmm_zero_f">0.0</string>
    <string name="mmm_zero"> </string>
    <string name="mmm_discount">折扣</string>
    <string name="mmm_filter">筛选</string>
    <string name="mmm_sub">-</string>
    <string name="mmm_add">+</string>
    <string name="mmm_one">1</string>
    <string name="mmm_fity_night">59</string>
    <string name="mmm_right_now">立即抢</string>
    <string name="mmm_in_stock">有货</string>

    <string name="mmm_fruit_sort1">台湾水果节</string>
    <string name="mmm_fruit_sort2">新品尝鲜</string>
    <string name="mmm_fruit_sort3">车厘子蓝莓</string>
    <string name="mmm_fruit_sort4">果切拼盘</string>
    <string name="mmm_fruit_sort5">桔/橙/柑/&#8230;</string>
    <string name="mmm_fruit_sort6">苹果/梨/&#8230;</string>
    <string name="mmm_fruit_sort7">热带水果</string>
    <string name="mmm_fruit_sort8">葡/提/莓果</string>
    <string name="mmm_fruit_sort9">奇异果</string>
    <string name="mmm_fruit_sort10">瓜类</string>
    <string name="mmm_0">0</string>
    <string name="mmm_input_search">请输入商品名</string>
    <string name="mmm_search_word">搜索词</string>
    <string name="mmm_history">历史记录</string>
    <string name="mmm_hotpot_festival">火锅节</string>
    <string name="mmm_vegetables">蔬菜</string>
    <string name="mmm_eggs">肉禽蛋</string>
    <string name="mmm_seafood">海鲜水产</string>
    <string name="mmm_condiment">粮油调味料</string>
    <string name="mmm_breakfast">早点</string>
    <string name="mmm_frozen">熟食冻品</string>
    <string name="mmm_milk">牛奶面包</string>
    <string name="mmm_drinks">酒水冲饮</string>
    <string name="mmm_snacks">休闲零食</string>
    <string name="mmm_clean">日用清洁</string>
    <string name="mmm_makeup">护理美妆</string>
    <string name="mmm_mother">母婴</string>
    <string name="mmm_pets">鲜花宠物</string>
    <string name="mmm_import">进口商品</string>
    <string name="mmm_specialty">地方特产</string>
    <string name="mmm_no_history">没有历史搜索记录</string>
    <string name="mmm_no_goods">没有相关商品</string>
    <string name="mmm_goods_label">商品标签</string>
    <string name="mmm_new">新品</string>
    <string name="mmm_flash_3">限时购</string>
    <string name="mmm_new_man">新人专享</string>
    <string name="mmm_special">特价</string>
    <string name="mmm_hot">热卖</string>
    <string name="mmm_reset">重置</string>
    <string name="mmm_ok">完成</string>
    <string name="mmm_far_start">离本场开始</string>
    <string name="mmm_far_end">离本场结束</string>
    <string name="mmm_hour">00</string>
    <string name="mmm_colon">:</string>

    <string name="mmm_flash_time9">09:00</string>
    <string name="mmm_flash_time11">11:00</string>
    <string name="mmm_flash_time14">14:00</string>
    <string name="mmm_flash_time16">16:00</string>
    <string name="mmm_flash_time18">18:00</string>
    <string name="mmm_flash_time20">20:00</string>
    <string name="mmm_flashing">抢购中</string>
    <string name="mmm_about_to_begin">即将开始</string>
    <string name="mmm_meat">肉</string>
    <string name="mmm_no_more">没有更多了~</string>
    <string name="mmm_load_more">正在加载...</string>

</resources>
