<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/llItemCrazy"
    android:layout_width="match_parent"
    android:background="@color/color1"
    android:layout_height="130dp">

    <FrameLayout
        android:id="@+id/flImg"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivGoods"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:src="@drawable/goods1"
            android:padding="@dimen/mmm_font_s20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mmm_font_s14"
            android:layout_marginLeft="@dimen/mmm_font_s14"
            android:textColor="@color/color1"
            android:background="@drawable/mmm_c10_s15_s00_w0_r9003"
            android:textSize="@dimen/mmm_font_s10"
            android:paddingRight="@dimen/mmm_font_s4"
            android:paddingLeft="@dimen/mmm_font_s4"
            android:paddingTop="@dimen/mmm_font_s2"
            android:paddingBottom="@dimen/mmm_font_s2"
            android:text="@string/mmm_discount"/>


    </FrameLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_goods_title"
        android:layout_marginTop="@dimen/mmm_font_s10"
        android:layout_marginRight="@dimen/mmm_font_s10"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/color3"
        app:layout_constraintLeft_toRightOf="@id/flImg"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_goods_subtitle"
        android:layout_marginTop="@dimen/mmm_font_s4"
        android:textSize="@dimen/mmm_font_s10"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintLeft_toRightOf="@id/flImg"/>

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_goods_quantity"
        android:layout_marginTop="@dimen/mmm_font_s4"
        android:textSize="@dimen/mmm_font_s10"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintLeft_toRightOf="@id/flImg"/>

    <TextView
        android:id="@+id/tvRemark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_goods_remark"
        android:textColor="@color/color15"
        android:textSize="@dimen/mmm_font_s10"
        android:background="@drawable/mmm_c90_s24_s00_w0_r9002"
        android:padding="@dimen/mmm_font_s2"
        android:layout_marginTop="@dimen/mmm_font_s4"
        app:layout_constraintTop_toBottomOf="@id/tvQuantity"
        app:layout_constraintLeft_toRightOf="@id/flImg"/>

    <TextView
        android:id="@+id/tvY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_rmb"
        android:textColor="@color/color16"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvRemark"
        app:layout_constraintLeft_toRightOf="@id/flImg"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_goods_price"
        android:textColor="@color/color16"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/mmm_font_s10"
        app:layout_constraintTop_toBottomOf="@id/tvRemark"
        app:layout_constraintLeft_toRightOf="@id/tvY"/>

    <!--    带删除线的tv-->
    <TextView
        android:id="@+id/tvY2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_rmb"
        android:textColor="@color/color6"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/mmm_font_s12"
        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
        app:layout_constraintLeft_toRightOf="@id/tvPrice" />

    <TextView
        android:id="@+id/tvOriginalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_zero_f"
        android:textColor="@color/color6"
        android:layout_marginTop="@dimen/mmm_font_s4"
        android:textSize="@dimen/mmm_font_s12"
        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
        app:layout_constraintLeft_toRightOf="@id/tvY2"/>

    <ImageView
        android:id="@+id/ivSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sub_able"
        android:layout_marginRight="@dimen/mmm_font_s10"
        android:elevation="3dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvOriginalPrice"/>

    <TextView
        android:id="@+id/tvNum"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginRight="@dimen/mmm_font_s10"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/mmm_one"
        app:layout_constraintBottom_toBottomOf="@id/tvOriginalPrice"/>

    <ImageView
        android:id="@+id/ivAdd"
        android:elevation="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_able"
        android:layout_marginRight="@dimen/mmm_font_s10"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvOriginalPrice"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/color7"
        android:layout_marginLeft="@dimen/mmm_font_s10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>